# samfkurator

./: .gitignore  Dockerfile  Procfile  config.yaml  docker-compose.yml  pyproject.toml  render.yaml  requirements.txt  samfkurator.db
extensions/bypass-paywalls/: README.html  README.md  background.js  changelog.txt  contentScript.js  contentScript_once.js  manifest.json  sites.js  sites_updated.json  updates.xml
extensions/bypass-paywalls/cs_local/: contentScript_de.js  contentScript_en.js  contentScript_es.pt.js  contentScript_fr.js  contentScript_it.js  contentScript_nl.js
extensions/bypass-paywalls/custom/: manifest.json  sites_custom.json
extensions/bypass-paywalls/custom/mv2/: manifest.json
extensions/bypass-paywalls/options/: htmlviewer.js  options.js  options_custom.js  popup.html  version.js
samfkurator/: __main__.py  cli.py  config.py  db.py  models.py
samfkurator/agent/: browser.py  curator.py
samfkurator/output/: daily.py  export.py  terminal.py
samfkurator/scoring/: claude_backend.py  deepseek_backend.py  gemini_backend.py  ollama_backend.py  prompt.py
samfkurator/sources/: extractors.py  rss.py  scraper.py
samfkurator/web/: app.py
samfkurator/web/templates/: index.html  login.html  must.html
scripts/: unpack_crx.py
