[project]
name = "samfkurator"
version = "0.1.0"
description = "Nyhedskurator til Samfundsfag A - scorer nyheder for undervisningsrelevans"
requires-python = ">=3.12"
dependencies = [
    "feedparser>=6.0",
    "trafilatura>=2.0",
    "httpx>=0.27",
    "pyyaml>=6.0",
    "rich>=13.0",
    "anthropic>=0.40",
    "flask>=3.0",
    "gunicorn>=23.0",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "playwright>=1.40",
    "google-genai>=1.0",
    "openai>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.8"]

[project.scripts]
samfkurator = "samfkurator.cli:main"

[tool.setuptools.packages.find]
include = ["samfkurator*"]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"
